--- a/Client Apps/NG/Assets/Production/Current/Nightingale.Assets/Styles/partials/_extras.scss
+++ b/Client Apps/NG/Assets/Production/Current/Nightingale.Assets/Styles/partials/_extras.scss
@@ -65,7 +65,8 @@ div.time-picker li.selected {
 }
 .validation-summary {
     color: red;
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     h3 {
         color: red;
     }
